--- a/storage-bigtable/Cargo.toml
+++ b/storage-bigtable/Cargo.toml
@@ -12,10 +12,15 @@ edition = "2021"
 [dependencies]
 backoff = { version = "0.4.0", features = ["tokio"] }
 bincode = "1.3.3"
+bytes = "1.0"
 bzip2 = "0.4.3"
 enum-iterator = "0.7.0"
 flate2 = "1.0.22"
+futures = "0.3.21"
 goauth = "0.11.1"
+http = "0.2.5"
+hyper = "0.14.14"
+hyper-proxy = "0.9.1"
 log = "0.4.14"
 prost = "0.10.0"
 prost-types = "0.10.0"
@@ -27,6 +32,7 @@ solana-sdk = { path = "../sdk", version = "=1.10.9" }
 solana-storage-proto = { path = "../storage-proto", version = "=1.10.9" }
 solana-transaction-status = { path = "../transaction-status", version = "=1.10.9" }
 thiserror = "1.0"
+tokio = "1.15"
 tonic = { version = "0.7.1", features = ["tls", "transport"] }
 zstd = "0.11.1"
 
